Fix cutoff indicator and audio failed X on search page
* Remove bad padding

* Allow search page to set query-parser-container sides padding to 0

<rikaitan.link>MWMxZDEwNGFkMWZjMjA2MzM4ZGJlOGM2MDJlOWFhYzIzNmI4YWFhMwo=</rikaitan.link>

--- a/ext/css/display.css
+++ b/ext/css/display.css
@@ -59,6 +59,7 @@
     --main-content-horizontal-padding: 0em;
     --entry-horizontal-padding: 0.72em;
     --entry-vertical-padding: 0.72em;
+    --query-horizontal-padding: 0.72em;
 
     --sidebar-width-no-units: 40;
     --sidebar-width: calc(1em * (var(--sidebar-width-no-units) / var(--font-size-no-units)));
@@ -617,8 +618,9 @@ button.sidebar-button.sidebar-button-highlight {
     padding: var(--main-content-vertical-padding) var(--main-content-horizontal-padding);
 }
 #query-parser-container {
-    padding-left: var(--entry-horizontal-padding);
-    padding-right: var(--entry-horizontal-padding);
+    overflow-y: auto;
+    padding-left: var(--query-horizontal-padding);
+    padding-right: var(--query-horizontal-padding);
     padding-bottom: 0.25em;
     border-bottom: var(--headword-thin-border-size) solid var(--light-border-color);
 }
